--- a/index.html
+++ b/index.html
@@ -598,7 +598,7 @@
   </div>
 
   <div class="mapa">
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3329.776826586671!2d-70.62382132266949!3d-33.42906229641993!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662cf9661ba4023%3A0x98d6b3cb50777459!2sAv.%20Providencia%201208%2C%207500571%20Providencia%2C%20Regi%C3%B3n%20Metropolitana!5e0!3m2!1sen!2scl!4v1748551984970!5m2!1sen!2scl" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <iframe class=" rounded wpc" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3329.776826586671!2d-70.62382132266949!3d-33.42906229641993!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662cf9661ba4023%3A0x98d6b3cb50777459!2sAv.%20Providencia%201208%2C%207500571%20Providencia%2C%20Regi%C3%B3n%20Metropolitana!5e0!3m2!1sen!2scl!4v1748551984970!5m2!1sen!2scl" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
   </div>
 </section>
 
