--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                   <p class="texth0 px-4 text-barlow texto-fade pt-3 text-justify container text-dark">Garantizamos el suministro de implementos de seguridad certificados para proteger a trabajadores en ambientes industriales y de riesgo.
                   </p>
                   <details class="text-justify2 container px-4 pb-2">
-                    <summary>Subservicios</summary>
+                    <summary>Detalle</summary>
                     <ul>
                       <li>
                         Cascos certificados.
@@ -153,7 +153,7 @@
                   <p class="texth0 px-4 text-barlow texto-fade pt-3 text-justify container text-dark">Abastecemos espacios administrativos con productos esenciales para el funcionamiento fluido y profesional de tus operaciones.
                   </p>
                   <details class="text-justify2 container px-4 pb-2">
-                    <summary>Subservicios</summary>
+                    <summary>Detalle</summary>
                     <ul>
                       <li>
                         Papelería institucional.
@@ -184,7 +184,7 @@
                   <p class="texth0 px-4 text-barlow texto-fade pt-3 text-justify container text-dark">Ofrecemos soluciones completas para espacios de alojamiento y alimentación institucional, asegurando comodidad, higiene y funcionalidad.
                   </p>
                   <details class="text-justify2 container px-4 pb-2">
-                    <summary>Subservicios</summary>
+                    <summary>Detalle</summary>
                     <ul>
                       <li>
                         Camas y camarotes.
