--- a/index.html
+++ b/index.html
@@ -254,8 +254,8 @@
     <section id="nosotros" class="nosotros-section">
       <div class="nosotros-overlay">
         <div class="nosotros-text">
-          <h2>Historia</h2>
-          <p>
+          <h2 class="text-center">Historia</h2>
+          <p class="text-center">
             Servicios Globales Milla SpA nace con el propósito de cubrir de manera ágil y eficiente las necesidades de abastecimiento en la industria.<br><br>
             Con foco en minería, fábricas, oficinas y campamentos, nos hemos especializado en proveer artículos de higiene, aseo, EPP, artículos de oficina y productos desechables industriales.<br><br>
             Nuestro compromiso es claro: ser tu socio estratégico para el abastecimiento integral de tu empresa.
@@ -339,7 +339,7 @@
 
     <section id="why" class="why-section">
       <div class="why-overlay">
-        <div class="why-text">
+        <div class="why-text text-center">
           <h2>¿Por qué nos prefieren?</h2>
           <p>
             Nuestros clientes nos prefieren por nuestra capacidad de respuesta rápida, nuestra comunicación efectiva y por brindar confianza desde el primer contacto.<br><br>
