--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <title>Servicios Globales Milla SpA</title>
 
     <!-- Meta Open Graph para WhatsApp y redes sociales -->
-  <meta property="og:title" content="INSER Ingenieria y Servicios" />
+  <meta property="og:title" content="Servicios Globales Milla SpA" />
   <meta property="og:description" content="Servicios Globales Milla SpA ofrece soluciones inmediatas de abastecimiento industrial para empresas, oficinas, fábricas y campamentos mineros, con una amplia gama de insumos y productos certificados." />
-  <meta property="og:image" content="https://www.inser.cl/assets/img/favicon_io/android-chrome-192x192.png" /> <!-- Imagen que se verá al compartir -->
-  <meta property="og:url" content="https://www.inser.cl/" /> <!-- URL de la web -->
+  <meta property="og:image" content="https://www.sg-milla.cl/assets/img/favicon_io/android-chrome-192x192.png" /> <!-- Imagen que se verá al compartir -->
+  <meta property="og:url" content="https://www.sg-milla.cl/" /> <!-- URL de la web -->
   <meta property="og:type" content="website" />
 
 
