--- a/index.html
+++ b/index.html
@@ -558,6 +558,8 @@
       <p>📧 ventas@sg-milla.cl</p>
       <p>🕘 Lunes a Viernes de 08:00 a 19:00 hrs.</p>
       <p>¡Agenda tu primera reunión con nosotros!</p>
+      <p><strong>Descarga nuestro Flyer a traves del código QR:</strong></p>
+      <img src="./assets/img/flyer.png" alt="">
       
     </div>
 
